--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@types/react-dom": "^16.9.10",
     "@types/react-router": "^5.1.11",
     "@types/react-router-dom": "^5.1.7",
+    "bcrypt": "^5.0.1",
     "firebase": "^7.21.0",
     "ionicons": "^5.4.0",
     "react": "^17.0.1",
+    "react-calendar": "^3.4.0",
     "react-dom": "^17.0.1",
     "react-icons": "^4.2.0",
     "react-router": "^5.2.0",
