--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bcrypt": "^5.0.1",
     "firebase": "^7.21.0",
     "ionicons": "^5.4.0",
+    "jsonwebtoken": "^8.5.1",
     "react": "^17.0.2",
     "react-calendar": "^3.4.0",
     "react-dom": "^17.0.1",
